--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,15 @@
 <%- include('./header') %>
-<main class="top-main">
-    <section class="top-fv">
-        <div class="top-title">
-            <h2>truthPost</h2>
-            <p>実名で真実を語ろう。</p>
+<main class="common-main">
+    <section class="common-section">
+        <div class="common-section__wrapper">
+            <a href="/login" class="common-btn">LOG IN</a>
+            <a href="/signup" class="common-btn">SIGN UP</a>
         </div>
-        <ul class="top-btn">
-            <li><a href="/login">Log in</a></li>
-            <li><a href="/signup">Sign up</a></li>
-        </ul>
     </section>
+    <aside class="common-sidebar">
+        <div class="common-sidebar__desc">
+            <h2>Welcome to <span>Micropost</span></h2>
+            <p>Feel free to post</p>
+        </div>
+    </aside>
 </main>
