login / signup デザイン修正

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,8 +2,8 @@
 <main class="common-main">
     <section class="common-section">
         <div class="common-section__wrapper">
-            <a href="/login" class="common-btn">LOG IN</a>
-            <a href="/signup" class="common-btn">SIGN UP</a>
+            <a href="/login" class="common-btn">Log in</a>
+            <a href="/signup" class="common-btn">Sign up</a>
         </div>
     </section>
     <aside class="common-sidebar">
