--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -30,15 +30,13 @@ body {
   position: relative;
   max-width: 480px;
   width: 100%;
-  margin-top: 60px;
+  padding-top: 300px;
+  overflow: scroll;
 }
 
 .common-section__wrapper{
-  position: absolute;
-  top: 30%;
-  left: 50%;
-  transform: translateX(-50%);
-
+  margin: auto;
+  width: 80%;
 }
 
 .common-sidebar{
@@ -86,7 +84,10 @@ body {
 
 .common-btn{
   display: block;
+  margin: auto;
   padding: 15px 60px;
+  width: 100%;
+  text-align: center;
   text-decoration: none;
   border-radius: 25px;
   color: var(--main-text-color);
@@ -146,6 +147,7 @@ body {
   top: 0;
   left: 0;
   right: 0;
+  z-index: 1;
 }
 
 .title a{
@@ -196,59 +198,42 @@ body {
   text-decoration: none;
 }
 
-/* login */
-.login-form,.signup-form{
-  width: 300px;
-  margin: 50px auto;
+/* login / signup */
+input{
+  outline: none;
+}
+
+input:-webkit-autofill {
+  box-shadow: 0 0 0 1000px #fff inset;
 }
 
 .form-group{
-  position: relative;
-  margin: 50px 0;
+  margin-bottom: 50px;
 }
 
-.form-group label{
-  color: var(--main-text-color);
-  background: var(--main-bg-color);
-  display: block;
-  width: 180px;
-  padding: 7px;
-  border-radius: 5px;
-  font-size: 12px;
-
-  position: absolute;
-  top: 0;
-  left: 5px;
-}
-
-.form-group input,
-.form-group p{
-  width: 100%;
-  height: 40px;
-  text-align: left;
+.form-group input{
   margin-top: 20px;
-  padding: 0 10px;
-  border: solid 1px;
-  border-radius: 5px;
+  padding: 10px;
+  width: 100%;
+  border-bottom: solid 1.5px var(--main-bg-color);
 }
 
-.form-group input[type="file"]{
-  border: unset;
+.form-group input:focus{
+  border-bottom: solid 2px var(--main-color);
 }
 
 .form-group img{
   width: 200px;
-  height: auto;
-  border: dotted 1px #000;
+  height: 200px;
+  object-fit: contain;
 }
 
-.login-form span, .signup-form span{
-  display: block;
-  color: red;
-  background: #FFEBE8;
-  margin: 10px 0;
-  padding: 10px 0;
-  font-size: 12px;
+.signup-form{
+  padding-bottom: 50px;
+}
+
+.form-group__upload{
+  text-align: center;
 }
 
 /* top */
