--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -58,7 +58,7 @@
     <aside class="common-sidebar">
         <div class="common-sidebar__desc">
             <h2>Welcome to <span>Micropost</span></h2>
-            <p>Feel free to post</p>
+            <p>Please sign up</p>
         </div>
     </aside>
 </main>
