--- a/views/login.ejs
+++ b/views/login.ejs
@@ -34,6 +34,9 @@
                 </div>
                 <input type="submit" value="Log in" class="common-btn">
             </form>
+            <div class="password-forget">
+                <a href="/reset">パスワードをお忘れの方はこちら</a>
+            </div>
         </div>
     </section>
     <aside class="common-sidebar">
