パスワードリセット メール送信

--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -8,6 +8,16 @@
                     <input type="mail" value="" name="mail" id="mail">
                 </div>
                 <span><%= errors %></span>
+                <div class="form-group">
+                    <label for="mail">パスワード</label>
+                    <input type="mail" value="" name="mail" id="mail">
+                </div>
+                <span><%= errors %></span>
+                <div class="form-group">
+                    <label for="mail">パスワード確認</label>
+                    <input type="mail" value="" name="mail" id="mail">
+                </div>
+                <input type="hidden" value="token" name="token">
                 <input type="submit" value="Reset" class="common-btn">
                 <span><%= success %></span>
             </form>
