--- a/views/login.ejs
+++ b/views/login.ejs
@@ -35,7 +35,7 @@
                 <input type="submit" value="Log in" class="common-btn">
             </form>
             <div class="password-forget">
-                <a href="/reset">パスワードをお忘れの方はこちら</a>
+                <a href="/application">パスワードをお忘れの方はこちら</a>
             </div>
         </div>
     </section>
