--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -46,7 +46,7 @@
                     <input type="file" id="file-change" name="file" onchange="fileChange(event);">
                 </div>
                 <input type="submit" value="Edit" class="common-btn">
-                <input type="submit" value="Delete account" class="common-btn delete-btn">
+                <a class="common-btn delete-btn" onclick="doDeleteAccount();">Delete account</a>
             </form>
         </div>
     </section>
