投稿内容を改行できるようにする

--- a/views/top.ejs
+++ b/views/top.ejs
@@ -39,7 +39,7 @@
                 </div>
 
                 <div class="archive-item__post">
-                  <p><%= value.message %></p>
+                  <p><%- value.message.replace('\r\n','<br>'); %></p>
                   <time>
                     <%= value.createdAt %>
                   </time>
