--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -50,6 +50,13 @@
                 <div class="form-group form-group__upload">
                     <img src="uploads/sample.png" alt="ユーザアイコン" id="image">
                     <input type="file" id="file-change" name="file" onchange="fileChange(event)">
+                    <% if(errors){ %>
+                        <% errors.find(obj=>{ %>
+                            <% if(obj.param == 'file'){ %>
+                                <span><%= obj.msg %></span>
+                            <% } %>
+                        <% }); %>
+                    <% } %>
                 </div>
                 <input type="submit" value="Sign up" class="common-btn">
             </form>
